--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,7 @@ $black: #333;
 $red: #cf2727;
 $blood: #803841;
 $lightred: #d49595;
+$brown: rgb(88, 30, 30);
 
 body {
   margin: 0;
@@ -344,7 +345,7 @@ header {
       }
 
       .options-bar {
-        height: 80px;
+        height: 90px;
         width: 100%;
         background: rgb(170, 170, 170);
         position: absolute;
@@ -353,15 +354,17 @@ header {
         .container {
           display: flex;
           align-items: flex-end;
-          height: 80px;
+          height: 100%;
           .option-wrap {
             width: 33%;
             margin: 0 auto;
             text-align: center;
-
+        
+            
             p {
               text-transform: uppercase;
               font-size: 13px;
+              padding:10px 0;
             }
 
             .select-options {
@@ -370,7 +373,7 @@ header {
               height: 30px;
               border: none;
               border-bottom: none;
-              background: rgb(88, 30, 30);
+              background: $blood;
 
               cursor: pointer;
               color: white;
